spacing fix

--- a/_sass/_includes/_header.scss
+++ b/_sass/_includes/_header.scss
@@ -227,7 +227,7 @@
 }
 
 .menu__list__item {
-	padding: 4px 0px;
+	padding: 2px 0px;
 }
 
 .menu__list__item__link {
