--- a/_sass/_includes/_portfolio.scss
+++ b/_sass/_includes/_portfolio.scss
@@ -6,7 +6,7 @@
 
 .portfolio {
 	margin-top: 0;
-	padding: $grid-spacing;
+	padding: 16px;
 }
 
 .portfolio-wrap {
